--- a/ThreadTest/src/线程.md
+++ b/ThreadTest/src/线程.md
@@ -22,3 +22,6 @@
 - （2）为什么notify(),notifyAll()必须在同步（Synchronized）方法/代码块中调用？
   
   答：notify(),notifyAll()是将锁交给含有wait()方法的线程，让其继续执行下去，如果自身没有锁，怎么叫把锁交给其他线程呢；（本质是让处于入口队列的线程竞争锁）
+  
+### ThreadLocal
+ThreadLocal，即线程变量，是一个以ThreadLocal对象为键、任意对象为值的存储结构。这个结构被附带在线程上，也就是说一个线程可以根据一个ThreadLocal对象查询到绑定在这个线程上的一个值。
